--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Blake Alexander</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="css/main.css" rel="stylesheet" type="text/css" /> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" media="screen" title="no title" charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -19,7 +20,7 @@
   </head>
   <body>
     <nav id="name-plate" class="landing-animation">
-      <h1 id="name">BLAKE<br>ALEXANDER</h1>
+      <h1 id="name">BLAKE ALEXANDER</h1>
       <form class="project-selector-buttons">
         <label class="custom-nav p1">1
           <input type="radio" name="nav" class="nav-buttons p1">
@@ -269,7 +270,7 @@
     </section>
 
 
-  <footer>
+  <footer class="testetr">
     <div class="about-me-container">
       <h2 class="about-me-label">About Me</h2>
       <p class="about-me">I am a full stack web developer based out of Los Angeles.  Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.  Over time, I have built on to that passion and honed it in the direction of software development.  Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
