basic format established

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <div class="bg-boxes">
     </div>
-    
+
+    <div class="bg-box-shadow"></div>
+
     <section id="buffer-name-buffer" class="landing-animation">
       <div class="buffer-left"></div>
       <h1 id="name">BLAKE ALEXANDER</h1>
