--- a/index.html
+++ b/index.html
@@ -18,112 +18,129 @@
     crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="bg-boxes">
-    </div>
+    <section class="primary-box-face">
+      <div class="bg-boxes">
+      </div>
 
-    <div class="bg-box-shadow"></div>
+      <div class="bg-box-shadow"></div>
 
-    <section id="buffer-name-buffer" class="landing-animation">
-      <div class="buffer-left"></div>
-      <h1 id="name">BLAKE ALEXANDER</h1>
-      <div class="buffer-right"></div>
-    </section>
+      <div class="screen-first"></div>
+      <div class="screen-second"></div>
 
-    <section class="about-me-container">
-      <h2 class="about-me-label">About Me</h2>
-      <p class="about-me-content">I am a full stack web developer based out of Los Angeles.  Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.  Over time, I have built on to that passion and honed it in the direction of software development.  Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
-      <div class="about-me-visual"></div>
-    </section>
+      <div class="letter-holders">
+        <div class="letter b">b</div>
+        <div class="letter l">l</div>
+        <div class="letter a">a</div>
+        <div class="letter k">k</div>
+        <div class="letter e">e</div>
+        <div class="letter blank"></div>
+        <div class="letter a">a</div>
+        <div class="letter l">l</div>
+        <div class="letter e">e</div>
+        <div class="letter x">x</div>
+        <div class="letter a">a</div>
+        <div class="letter n">n</div>
+        <div class="letter d">d</div>
+        <div class="letter e">e</div>
+        <div class="letter r">r</div>
+      </div>
 
-    <section class="project-containers">
-      <div class="project-one-container">
-        <h5 class="project-heading">PROJECT: </h5>
-        <h2 class="project-title">Destiny MetaTrends</h2>
-        <h5 class="project-details">DETAILS: </h5>
-        <p class="project-description">Destiny MetaTrends is a data parsing tool that defines weapon performance statistics uniquely and accessibly.</p>
-        <form class="project-buttons-container">
-          <button class="project-buttons view-project">VIEW PROJECT</button>
-          <button class="project-buttons view-code">VIEW CODE</button>
-          <button class="project-buttons view-server-code">VIEW SERVER CODE</button>
-        </form>
+      <section class="about-me-container">
+        <h2 class="about-me-label">ABOUT ME</h2>
+        <p class="about-me-content">I am a full stack web developer based out of Los Angeles.  Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.  Over time, I have built on to that passion and honed it in the direction of software development.  Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
+      </section>
 
-        <div class="project-one">
-          <div class="computer-demo focused">
-            <div class="computer monitor"></div>
-            <div class="computer stand"></div>
-            <div class="computer base"></div>
-          </div>
-          <div class="phone-demo">
-            <div class="phone screen">
-              <div class="phone speaker"></div>
-              <div class="phone home-button"></div>
+      <section class="project-containers">
+        <div class="project-one-container">
+          <h5 class="project-heading">PROJECT: </h5>
+          <h2 class="project-title">Destiny MetaTrends</h2>
+          <h5 class="project-details">DETAILS: </h5>
+          <p class="project-description">Destiny MetaTrends is a data parsing tool that defines weapon performance statistics uniquely and accessibly.</p>
+          <form class="project-buttons-container">
+            <button class="project-buttons view-project">VIEW PROJECT</button>
+            <button class="project-buttons view-code">VIEW CODE</button>
+            <button class="project-buttons view-server-code">VIEW SERVER CODE</button>
+          </form>
+
+          <div class="project-one">
+            <div class="computer-demo focused">
+              <div class="computer monitor"></div>
+              <div class="computer stand"></div>
+              <div class="computer base"></div>
+            </div>
+            <div class="phone-demo">
+              <div class="phone screen">
+                <div class="phone speaker"></div>
+                <div class="phone home-button"></div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="project-two-container">
-        <h5 class="project-heading">PROJECT: </h5>
-        <h2 class="project-title">Flexbox Sandbox</h2>
-        <h5 class="project-details">DETAILS: </h5>
-        <p class="project-description">Focusing on one of the most fundamental and simple layout modules provided natively in CSS, Flexbox Sandbox offers randomly generated puzzles for users to solve.  Every puzzle differs in the number of parent and child elements generated and which Flexbox properties are adjusted for each element to provide unlimited practice for anyone desiring to learn this method of website layout.</p>
-        <form class="project-buttons-container">
-          <button class="project-buttons view-project">VIEW PROJECT</button>
-          <button class="project-buttons view-code">VIEW CODE</button>
-        </form>
+        <div class="project-two-container">
+          <h5 class="project-heading">PROJECT: </h5>
+          <h2 class="project-title">Flexbox Sandbox</h2>
+          <h5 class="project-details">DETAILS: </h5>
+          <p class="project-description">Focusing on one of the most fundamental and simple layout modules provided natively in CSS, Flexbox Sandbox offers randomly generated puzzles for users to solve.  Every puzzle differs in the number of parent and child elements generated and which Flexbox properties are adjusted for each element to provide unlimited practice for anyone desiring to learn this method of website layout.</p>
+          <form class="project-buttons-container">
+            <button class="project-buttons view-project">VIEW PROJECT</button>
+            <button class="project-buttons view-code">VIEW CODE</button>
+          </form>
 
-        <div class="project-two">
-          <div class="computer-demo focused">
-            <div class="computer monitor"></div>
-            <div class="computer stand"></div>
-            <div class="computer base"></div>
-          </div>
-          <div class="phone-demo">
-            <div class="phone screen">
-              <div class="phone speaker"></div>
-              <div class="phone home-button"></div>
+          <div class="project-two">
+            <div class="computer-demo focused">
+              <div class="computer monitor"></div>
+              <div class="computer stand"></div>
+              <div class="computer base"></div>
+            </div>
+            <div class="phone-demo">
+              <div class="phone screen">
+                <div class="phone speaker"></div>
+                <div class="phone home-button"></div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="project-three-container">
-        <h5 class="project-heading">PROJECT: </h5>
-        <h2 class="project-title">Global Location Search</h2>
-        <h5 class="project-details">DETAILS: </h5>
-        <p class="project-description">Global Location Search accesses the databases of Google, Wikipedia, and NewsAPI to retrieve a well-rounded breadth of information for any location searched.</p>
-        <form class="project-buttons-container">
-          <button class="project-buttons view-project">VIEW PROJECT</button>
-          <button class="project-buttons view-code">VIEW CODE</button>
-        </form>
+        <div class="project-three-container">
+          <h5 class="project-heading">PROJECT: </h5>
+          <h2 class="project-title">Global Location Search</h2>
+          <h5 class="project-details">DETAILS: </h5>
+          <p class="project-description">Global Location Search accesses the databases of Google, Wikipedia, and NewsAPI to retrieve a well-rounded breadth of information for any location searched.</p>
+          <form class="project-buttons-container">
+            <button class="project-buttons view-project">VIEW PROJECT</button>
+            <button class="project-buttons view-code">VIEW CODE</button>
+          </form>
 
-        <div class="project-three">
-          <div class="computer-demo focused">
-            <div class="computer monitor"></div>
-            <div class="computer stand"></div>
-            <div class="computer base"></div>
-          </div>
-          <div class="phone-demo">
-            <div class="phone screen">
-              <div class="phone speaker"></div>
-              <div class="phone home-button"></div>
+          <div class="project-three">
+            <div class="computer-demo focused">
+              <div class="computer monitor"></div>
+              <div class="computer stand"></div>
+              <div class="computer base"></div>
+            </div>
+            <div class="phone-demo">
+              <div class="phone screen">
+                <div class="phone speaker"></div>
+                <div class="phone home-button"></div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
+
+
+      <footer class="contact-section">
+        <div class="contact-me">
+          <a class="social-links email" href="mailto:blake.alexander.13@gmail.com">
+            <i class="fas fa-envelope-square" style="color:white"></i></a>
+        </div>
+        <div class="information">
+          <a class="social-links gh-link" href="https://github.com/Blalexander" target="_blank">
+            <i class="fab fa-github-square" style="color:white"></i></a>
+        </div>
+      </footer>
     </section>
-
-
-    <footer class="contact-section">
-      <div class="contact-me">
-        <a class="social-links email" href="mailto:blake.alexander.13@gmail.com">
-          <i class="fas fa-envelope-square" style="color:white"></i></a>
-      </div>
-      <div class="information">
-        <a class="social-links gh-link" href="https://github.com/Blalexander" target="_blank">
-          <i class="fab fa-github-square" style="color:white"></i></a>
-      </div>
-    </footer>
+    <section class="secondary-box-face"></section>
 
     <script src="script.js"></script>
   </body>
