--- a/index.html
+++ b/index.html
@@ -18,36 +18,26 @@
     crossorigin="anonymous"></script>
   </head>
   <body>
-    <section class="primary-box-face">
-      <div class="bg-boxes">
-      </div>
+    <div class="bg-boxes">
+    </div>
+
+    <main>
 
       <div class="bg-box-shadow"></div>
 
-      <div class="screen-first"></div>
-      <div class="screen-second"></div>
-
-      <div class="letter-holders">
-        <div class="letter b">b</div>
-        <div class="letter l">l</div>
-        <div class="letter a">a</div>
-        <div class="letter k">k</div>
-        <div class="letter e">e</div>
-        <div class="letter blank"></div>
-        <div class="letter a">a</div>
-        <div class="letter l">l</div>
-        <div class="letter e">e</div>
-        <div class="letter x">x</div>
-        <div class="letter a">a</div>
-        <div class="letter n">n</div>
-        <div class="letter d">d</div>
-        <div class="letter e">e</div>
-        <div class="letter r">r</div>
+      <div class="page-indicator-container">
+        <div class="page-indicator-line line-left"></div>
+        <div class="page-indicator visual"></div>
+        <div class="page-indicator-line line-right"></div>
       </div>
+
+      <!-- <div class="name">BLAKE ALEXANDER</div> -->
 
       <section class="about-me-container">
         <h2 class="about-me-label">ABOUT ME</h2>
+        <div class="label-transform"></div>
         <p class="about-me-content">I am a full stack web developer based out of Los Angeles.  Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.  Over time, I have built on to that passion and honed it in the direction of software development.  Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
+        <div class="content-transform"></div>
       </section>
 
       <section class="project-containers">
@@ -139,8 +129,8 @@
             <i class="fab fa-github-square" style="color:white"></i></a>
         </div>
       </footer>
-    </section>
-    <section class="secondary-box-face"></section>
+    </main>
+    
 
     <script src="script.js"></script>
   </body>
