--- a/index.html
+++ b/index.html
@@ -25,19 +25,30 @@
 
       <div class="bg-box-shadow"></div>
 
-      <div class="page-indicator-container">
-        <div class="page-indicator-line line-left"></div>
-        <div class="page-indicator visual"></div>
-        <div class="page-indicator-line line-right"></div>
-      </div>
+      <div class="name-mouseover-obj"></div>
 
-      <!-- <div class="name">BLAKE ALEXANDER</div> -->
+      <h1 class="name">BLAKE ALEXANDER</h1>
+
+      <form class="navigation-container">
+        <button class="nav-buttons about-me">About Me</button>
+        <button class="nav-buttons p1">Project 1</button>
+        <button class="nav-buttons p2">Project 2</button>
+        <button class="nav-buttons p3">Project 3</button>
+      </form>
 
       <section class="about-me-container">
-        <h2 class="about-me-label">ABOUT ME</h2>
-        <div class="label-transform"></div>
         <p class="about-me-content">I am a full stack web developer based out of Los Angeles.  Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.  Over time, I have built on to that passion and honed it in the direction of software development.  Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
-        <div class="content-transform"></div>
+
+        <div class="contact-section">
+          <div class="contact-me">
+            <a class="social-links email" href="mailto:blake.alexander.13@gmail.com">
+              <i class="fas fa-envelope-square" style="color:white"></i></a>
+          </div>
+          <div class="information">
+            <a class="social-links gh-link" href="https://github.com/Blalexander" target="_blank">
+              <i class="fab fa-github-square" style="color:white"></i></a>
+          </div>
+        </div>
       </section>
 
       <section class="project-containers">
@@ -118,17 +129,6 @@
         </div>
       </section>
 
-
-      <footer class="contact-section">
-        <div class="contact-me">
-          <a class="social-links email" href="mailto:blake.alexander.13@gmail.com">
-            <i class="fas fa-envelope-square" style="color:white"></i></a>
-        </div>
-        <div class="information">
-          <a class="social-links gh-link" href="https://github.com/Blalexander" target="_blank">
-            <i class="fab fa-github-square" style="color:white"></i></a>
-        </div>
-      </footer>
     </main>
     
 
