basics for circular animation

--- a/index.html
+++ b/index.html
@@ -18,37 +18,85 @@
     crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="bg-boxes">
-    </div>
 
-    <main>
-
-      <div class="bg-box-shadow"></div>
-
-      <div class="name-mouseover-obj"></div>
-
-      <h1 class="name">BLAKE ALEXANDER</h1>
-
-      <form class="navigation-container">
-        <button class="nav-buttons about-me">About Me</button>
-        <button class="nav-buttons p1">Project 1</button>
-        <button class="nav-buttons p2">Project 2</button>
-        <button class="nav-buttons p3">Project 3</button>
-      </form>
-
-      <section class="about-me-container">
-        <p class="about-me-content">I am a full stack web developer based out of Los Angeles.  Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.  Over time, I have built on to that passion and honed it in the direction of software development.  Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
-
-        <div class="contact-section">
-          <div class="contact-me">
-            <a class="social-links email" href="mailto:blake.alexander.13@gmail.com">
-              <i class="fas fa-envelope-square" style="color:white"></i></a>
+    <main> 
+      <div class="animation-container">
+        <div class="dot-container">
+          <div class="dot d1">
+            <div class="dot-background"></div>
           </div>
-          <div class="information">
-            <a class="social-links gh-link" href="https://github.com/Blalexander" target="_blank">
-              <i class="fab fa-github-square" style="color:white"></i></a>
+          <div class="dot d2">
+            <div class="dot-background"></div>
           </div>
+          <div class="dot d3">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d4">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d5">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d6">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d7">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d8">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d9">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d10">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d11">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d12">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d13">
+            <div class="dot-background"></div>
+          </div>
+          <div class="dot d14">
+            <div class="dot-background"></div>
+          </div>
+          <!-- <div class="dot d15"></div> -->
+          <!-- <div class="dot d16"></div> -->
+          <!-- <div class="dot d17"></div> -->
+          <!-- <div class="dot d18"></div> -->
+          <!-- <div class="dot d19"></div> -->
+          <!-- <div class="dot d20"></div> -->
+
+          <!-- <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+            <rect width="100" height="100" stroke="black" stroke-width="3" fill="transparent">
+            <animateTransform attributeName="transform" attributeType="XML" type="scale" values="1;0.2;1" dur="2s" begin="4s" 
+            />
+            </rect>
+          </svg> -->
+          <div class="square sq1"></div>
+          <div class="square sq2"></div>
+          <div class="square sq3"></div>
+          <div class="square sq4"></div>
+          <div class="square sq5"></div>
+          <div class="square sq6"></div>
+          <div class="square sq7"></div>
+          <div class="square sq8"></div>
+          <div class="square sq9"></div>
+          <div class="square sq10"></div>
+          <div class="square sq11"></div>
+          <div class="square sq12"></div>
+          <div class="square sq13"></div>
         </div>
+      </div>
+
+
+
+      <section class="header">
+        <h1 class="name">BLAKE ALEXANDER</h1>
       </section>
 
       <section class="project-containers">
@@ -62,20 +110,6 @@
             <button class="project-buttons view-code">VIEW CODE</button>
             <button class="project-buttons view-server-code">VIEW SERVER CODE</button>
           </form>
-
-          <div class="project-one">
-            <div class="computer-demo focused">
-              <div class="computer monitor"></div>
-              <div class="computer stand"></div>
-              <div class="computer base"></div>
-            </div>
-            <div class="phone-demo">
-              <div class="phone screen">
-                <div class="phone speaker"></div>
-                <div class="phone home-button"></div>
-              </div>
-            </div>
-          </div>
         </div>
 
         <div class="project-two-container">
@@ -87,20 +121,6 @@
             <button class="project-buttons view-project">VIEW PROJECT</button>
             <button class="project-buttons view-code">VIEW CODE</button>
           </form>
-
-          <div class="project-two">
-            <div class="computer-demo focused">
-              <div class="computer monitor"></div>
-              <div class="computer stand"></div>
-              <div class="computer base"></div>
-            </div>
-            <div class="phone-demo">
-              <div class="phone screen">
-                <div class="phone speaker"></div>
-                <div class="phone home-button"></div>
-              </div>
-            </div>
-          </div>
         </div>
 
         <div class="project-three-container">
@@ -112,19 +132,20 @@
             <button class="project-buttons view-project">VIEW PROJECT</button>
             <button class="project-buttons view-code">VIEW CODE</button>
           </form>
+        </div>
+      </section>
 
-          <div class="project-three">
-            <div class="computer-demo focused">
-              <div class="computer monitor"></div>
-              <div class="computer stand"></div>
-              <div class="computer base"></div>
-            </div>
-            <div class="phone-demo">
-              <div class="phone screen">
-                <div class="phone speaker"></div>
-                <div class="phone home-button"></div>
-              </div>
-            </div>
+      <section class="about-me-container">
+        <p class="about-me-content">I am a full stack web developer based out of Los Angeles.  Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.  Over time, I have built on to that passion and honed it in the direction of software development.  Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
+
+        <div class="contact-section">
+          <div class="contact-me">
+            <a class="social-links email" href="mailto:blake.alexander.13@gmail.com">
+              <i class="fas fa-envelope-square" style="color:white"></i></a>
+          </div>
+          <div class="information">
+            <a class="social-links gh-link" href="https://github.com/Blalexander" target="_blank">
+              <i class="fab fa-github-square" style="color:white"></i></a>
           </div>
         </div>
       </section>
